--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "coinzap-ng",
   "version": "1.0.0",
+  "description": "TikTok Coins, Airtime & Data site",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.6.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "axios": "^1.7.0",
     "express": "^4.18.2",
-    "fs-extra": "^11.1.1"
+    "fs-extra": "^11.1.1",
+    "dotenv": "^16.3.1"
   }
 }
