--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "coinzap-ng",
-  "version": "1.0.0",
-  "description": "TikTok Coins, Airtime & Data site",
+  "version": "2.0.0",
+  "description": "CoinZap NG – Wallet-based digital services platform",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.7.0",
+    "axios": "^1.6.2",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "fs-extra": "^11.1.1",
-    "dotenv": "^16.3.1"
+    "express-session": "^1.17.3",
+    "fs-extra": "^11.2.0",
+    "uuid": "^9.0.1"
   }
 }
