--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "coinzap-ng",
   "version": "1.0.0",
-  "description": "CoinZap NG - TikTok coins, airtime, data bundles",
+  "description": "CoinZap NG - TikTok coins, airtime, data bundles site",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.7.0",
-    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "fs-extra": "^11.1.1",
+    "body-parser": "^1.20.2",
     "uuid": "^9.0.0",
-    "body-parser": "^1.20.2"
+    "bcrypt": "^5.1.0",
+    "node-fetch": "^3.3.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
